[style] Fix image stretching

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -185,6 +185,7 @@ img {
     width: 100%;
     max-height: 500px;
     display: block;
+    object-fit: contain;
     margin: auto;
     border-radius: 8px;
 }
